2017-02-19  Bruno Haible  <bruno@clisp.org>

	Fix clang warning "flag '-falign-functions=4' is not supported".
	* makemake.in (XCC_BRAND): New variable.
	(XCFLAGS): Don't use -falign-functions=4 with clang.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	Fix build failure with clang.
	* lispbibl.d (STACK_register, mv_count_register, value1_register,
	SP_register): Don't define for clang.
	(restartf_t): Don't use _Noreturn on a function type, except with GCC.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	Make --with-{libsigsegv,libffcall}-prefix with clang on 64-bit Ubuntu.
	* glm4/lib-prefix.m4: Update from gnulib.
	* aclocal.m4, src/configure, modules/*/configure: Regenerated.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	Modernize: Really update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported
	build-prerequisites".
	* Makefile.devel (GNULIB_AUX, build-aux-update): Fetch depcomp and
	install-sh from Automake, not gnulib. Fetch also ar-lib from Automake.
	* build-aux/config.guess: Update from gnulib git.
	* build-aux/config.rpath: Likewise.
	* build-aux/config.sub: Likewise.
	* build-aux/ar-lib: New file, from automake git.
	* build-aux/compile: Update from automake git.
	* build-aux/depcomp: Likewise.
	* build-aux/missing: Likewise.
	* build-aux/ylwrap: Likewise.
	* build-aux/snippet/*: Update from gnulib.
	* gllib/*: Likewise.
	* glm4/*: Likewise.
	* gllib/Makefile.am, gllib/Makefile.in: Regenerated.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
	* modules/*/configure, modules/*/config.h.in: Likewise.
	* modules/*/*/config.h.in, modules/*/*/configure: Likewise.
	* utils/txt2c.c (process_file): Handle multiline #if directives.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	maint: Fix conflict between fix-perms.sh and gnulib import.
	* utils/fix-perms.sh: Don't clobber the permissions of
	gllib/uniname/gen-uninames.lisp.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	Fix build failure on Linux with musl libc.