@@ -1,5 +1,11 @@
 2017-02-19  Bruno Haible  <bruno@clisp.org>
 
+	Fix collision between ASCII character names and Unicode character names.
+	* charstrg.d (char_name): Special case for #\U0001F514 and #\U0001F5CF.
+	(name_char): Special case for "UNICODE_BELL" and "UNICODE PAGE".
+
+2017-02-19  Bruno Haible  <bruno@clisp.org>
+
 	Fix clang warning "flag '-falign-functions=4' is not supported".
 	* makemake.in (XCC_BRAND): New variable.
 	(XCFLAGS): Don't use -falign-functions=4 with clang.
